fix: resolve current Qodana findings